# vgfx-cpp

./: CMakeLists.txt  main.cpp  shader.frag  shader.vert  vg.cpp  vg.hpp
